# visionforge

./: .codecov.yml  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  cliff.toml  forge.py  health_check.py  main.py  optimize.py  pyproject.toml  requirements.txt  setup.py  smoke_test.py  sonar-project.properties  train_bloodmnist.py
.github/workflows/: badges.yml  ci.yml  release.yml
backup_20260116_190657/src/core/: __init__.py  orchestrator.py
backup_20260116_190657/src/data_handler/: data_explorer.py  dataset.py  factory.py  fetcher.py  transforms.py
backup_20260116_190657/src/evaluation/: __init__.py  engine.py  metrics.py  pipeline.py  reporting.py  tta.py  visualization.py
backup_20260116_190657/src/models/: __init__.py  efficientnet_b0.py  factory.py  resnet_18_adapted.py
backup_20260116_190657/src/optimization/: __init__.py  early_stopping.py  objective.py  orchestrator.py
backup_20260116_190657/src/trainer/: engine.py  trainer.py
docs/guide/: ARCHITECTURE.md  CONFIGURATION.md  DOCKER.md  EXPORT.md  FRAMEWORK.md  OPTIMIZATION.md  TESTING.md
docs/media/: config.yaml
figures/: training_curves.npz
orchard/: README.md
orchard/core/: __init__.py  cli.py  orchestrator.py
orchard/core/config/: __init__.py  architecture_config.py  augmentation_config.py  dataset_config.py  engine.py  evaluation_config.py  hardware_config.py  infrastructure_config.py  manifest.py  models_config.py  optuna_config.py  telemetry_config.py  training_config.py  types.py
orchard/core/environment/: __init__.py  guards.py  hardware.py  policy.py  reproducibility.py  timing.py
orchard/core/io/: __init__.py  checkpoints.py  data_io.py  serialization.py
orchard/core/logger/: __init__.py  logger.py  progress.py  reporter.py  styles.py
orchard/core/metadata/: __init__.py  base.py  (+3 more)
orchard/data_handler/: __init__.py  data_explorer.py  dataset.py  factory.py  fetcher.py  galaxy10_converter.py  loader.py  synthetic.py  transforms.py
orchard/evaluation/: __init__.py  engine.py  evaluation_pipeline.py  evaluator.py  metrics.py  pipeline.py  reporting.py  tta.py  visualization.py
orchard/export/: onnx_exporter.py
orchard/models/: __init__.py  convnext_tiny.py  efficientnet_b0.py  factory.py  mini_cnn.py  resnet_18.py  resnet_18_adapted.py  timm_backbone.py  vit_tiny.py
orchard/optimization/: __init__.py  early_stopping.py  objective.py  orchestrator.py  search_spaces.py
orchard/pipeline/: __init__.py  phases.py
orchard/tracking/: __init__.py  tracker.py
orchard/trainer/: __init__.py  engine.py  losses.py  setup.py  trainer.py
recipes/: config.yaml  config_224x224_efficientnet_b0.yaml  config_convnext_tiny.yaml  config_efficientnet_b0.yaml  config_galaxy10_efficientnet_b0.yaml  config_galaxy10_vit_tiny.yaml  config_mini_cnn.yaml  config_resnet_18.yaml  config_resnet_18_adapted.yaml  config_vit_tiny.yaml  optuna_convnext_tiny.yaml  optuna_efficientnet_b0.yaml  optuna_galaxy10_efficientnet_b0.yaml  optuna_galaxy10_vit_tiny.yaml  optuna_mini_cnn.yaml  optuna_resnet_18.yaml  optuna_resnet_18_adapted.yaml  optuna_vit_tiny.yaml
scripts/: check_quality.sh  check_quality_full.sh  data_handler.py  evaluation.py  models.py  trainer.py  utils.py
scripts/core/: __init__.py  cli.py  config.py  constants.py  dataset_metadata.py  logger.py  system.py
scripts/data_handler/: __init__.py  dataset.py  fetcher.py  loader.py  transforms.py  visualizer.py
scripts/evaluation/: __init__.py  engine.py  pipeline.py  reporting.py  visualization.py
scripts/models/: __init__.py  factory.py  resnet_18_adapted.py
scripts/trainer/: __init__.py  engine.py  trainer.py
src/core/: __init__.py  cli.py  config.py  io.py  orchestrator.py  paths.py  system.py
src/data_handler/: __init__.py  data_explorer.py  dataset.py  factory.py  transforms.py
src/evaluation/: __init__.py  engine.py  pipeline.py  reporting.py  visualization.py
src/models/: factory.py  resnet_18_adapted.py
src/trainer/: __init__.py  engine.py  setup.py  trainer.py
tests/: README.md  conftest.py  health_check.py  smoke_test.py  test_metadata.py
tests/test_config/: test_architecture_config.py  test_augmentation.py  test_augmentation_config.py  test_cross_validator.py  test_dataset.py  test_dataset_config.py  test_engine.py  test_engine_config.py  test_evaluation.py  test_evaluation_config.py  test_export_config.py  test_hardware.py  test_hardware_config.py  test_infrastructure_config.py  test_infrastructure_manager.py  test_manifest.py  test_models.py  test_models_config.py  test_optuna.py  test_optuna_config.py  test_telemetry.py  test_telemetry_config.py  test_training_config.py  test_types.py
tests/test_core/: test_cli.py  test_rootorchestrator.py
tests/test_data_handler/: test_data_explorer.py  test_data_factory.py  test_dataset.py  test_fetcher.py  test_galaxy10_converter.py  test_loader.py  test_synthetic.py  test_transforms.py
tests/test_environment/: test_guards.py  test_hardware.py  test_policy.py  test_reproduciblity.py
tests/test_evaluation/: test_evaluation_metrics.py  test_evaluation_pipeline.py  test_evaluator.py  test_pipeline.py  test_reporting.py  test_tta.py  test_visualization.py
tests/test_export/: test_onnx_exporter.py  test_validation.py
tests/test_io/: test_io.py  test_serialization.py
tests/test_logger/: test_logger.py  test_reporter.py
tests/test_models/: test_convnext_tiny.py  test_efficientnet_b0.py  test_factory.py  test_mini_cnn.py  test_resnet_18.py  test_resnet_18_adapted.py  test_timm_backbone.py  test_vit_tiny.py
tests/test_optimization/: test_builders.py  test_early_stopping.py  test_exporters.py  test_objective.py  test_orchestrator.py  test_orchestrator_modules.py  test_search_spaces.py  test_training_executor.py
tests/test_paths/: test_constants.py  test_run_paths.py
tests/test_pipeline/: test_phases.py
tests/test_tracking/: test_tracker.py
tests/test_trainer/: test_engine.py  test_losses.py  test_setup.py  test_trainer.py
tools/: health_check.py  smoke_test.py  unit_test.py
visionforge.egg-info/: PKG-INFO  SOURCES.txt
(+59 files in other folders)
