[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visionforge"
version = "0.1.0"
description = "Type-Safe Deep Learning Framework for Computer Vision"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tommaso Russo", email = "tomrussobuilds@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "Pillow>=10.0.0",
    "h5py>=3.8.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "optuna>=3.5.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "xlsxwriter>=3.1.0",
    "openpyxl>=3.1.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "timm>=0.9.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0; python_version < '3.14'",
    "onnxscript>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "radon>=6.0.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
]

[tool.setuptools.packages.find]
include = ["orchard*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
filterwarnings = [
    "ignore:AMP requires GPU.*:UserWarning",
    "ignore:`isinstance\\(treespec, LeafSpec\\)` is deprecated.*:FutureWarning",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests - fast, isolated component tests",
    "integration: Integration tests - test component interactions",
    "slow: Slow tests - may take several minutes",
    "gpu: Tests requiring GPU hardware",
]

[tool.coverage.run]
source = ["orchard"]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "tests/*:F841,E501,W293"
]